--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 空白的博客
-subtitle: 需要效率的事情交给机器人就好了，我们真正擅长的是浪费时间。
+title: Weikun's Notes
+subtitle: 怀揣代码中的唏嘘，记录生活中的点滴
 description: 记录生活与职业中的点滴
 author: 沈伟坤
 language: zh-CN
